# idkhtnb

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  run.sh
migrations/2021-02-22-115056_start/: down.sql  up.sql
server_data/tests/: 1.ron  2.ron
src/: lib.rs  main.rs  models.rs  schema.rs
